# Corinna

./: .gitignore  FEATURE_ASK_CORINNA.md  FEATURE_ASK_CORINNA_V2.md  README.md
backend/agents/company_researcher/: README.md  langgraph.json  pyproject.toml
backend/agents/company_researcher/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/agents/company_researcher/src/: __init__.py
backend/agents/company_researcher/src/company_researcher/: configuration.py  csv_parser.py  graph.py  models.py  question_loader.py  researcher.py  state.py  utils.py
backend/agents/company_researcher/src/company_researcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/agents/company_researcher/src/company_researcher/prompts/: researcher.jinja  (+1 more)
backend/agents/service_categorizer/: langgraph.json  pyproject.toml
backend/agents/service_categorizer/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
backend/agents/service_categorizer/examples/: telenet_profile.json  test_telenet.py
backend/agents/service_categorizer/src/: __init__.py
backend/agents/service_categorizer/src/service_categorizer/: __init__.py  graph.py  models.py  state.py
backend/agents/service_categorizer/src/service_categorizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/agents/service_categorizer/tests/: __init__.py  test_obligations.py
(+196 files in other folders)
